syntax = "proto3";

package trainer;

service TrainerService {
  // Initiates a new training job asynchronously.
  // Returns a job_id that can be used to track the status.
  rpc TriggerTraining(TriggerTrainingRequest) returns (TriggerTrainingResponse);

  // Retrieves the current status of a training job.
  rpc GetTrainingJobStatus(GetTrainingJobStatusRequest) returns (GetTrainingJobStatusResponse);
}

enum JobStatus {
  // Default status, indicating an unset or unknown state.
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_PENDING = 1;     // Job is queued but not yet started
  JOB_STATUS_RUNNING = 2;     // Job is actively processing
  JOB_STATUS_SUCCEEDED = 3;   // Job completed successfully
  JOB_STATUS_FAILED = 4;      // Job failed due to an error
}

message TriggerTrainingRequest {
  // A tag for the model version to be trained (e.g., "v2.1.0").
  // This will be used for naming artifacts in S3 and for tracking.
  string model_version_tag = 1;
  // The ID of the merchant for whom the training is being triggered.
  string merchant_id = 2;
}

message TriggerTrainingResponse {
  // An identifier for the submitted training job.
  string job_id = 1;
  // A human-readable message confirming submission.
  // e.g., "Training job for model version v2.1.0 submitted successfully with ID: xyz"
  string message = 2;
}

message GetTrainingJobStatusRequest {
  // The ID of the training job to query.
  string job_id = 1;
}

message GetTrainingJobStatusResponse {
  // The ID of the job.
  string job_id = 1;
  // Current status of the job.
  JobStatus status = 2;
  // Human-readable message providing more details about the current status.
  // e.g., "Processing data", "Model training complete", "Error: S3 access denied"
  string message = 3;
  // The model version tag associated with this job.
  string model_version_tag = 4;
  // Timestamp of job creation (RFC3339 UTC format, e.g., "2023-10-27T10:30:00Z").
  string created_at = 5;
  // Timestamp of the last status update (RFC3339 UTC format, e.g., "2023-10-27T10:35:00Z").
  string updated_at = 6;
}